# ot-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: entry.py  user.py
src/repositories/: entry_repository.py  user_repository.py
src/services/: diary_service.py  entry_service.py  mood_service.py  service.py
src/tests/: conftest.py
src/tests/repositories/: entry_repository_test.py  user_repository_test.py
src/tests/services/: service_test.py
src/ui/: entries_view.py  login_view.py  main_page_view.py  moods_view.py  new_entry_view.py  past_entries_view.py  register_view.py  ui.py
