[tool.poetry]
name = "python-mood-tracker"
version = "0.1.0"
description = ""
authors = ["Liisa <liisa-marie.kettunen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "python_mood_tracker"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
